    but not downloading its media. This option goes in the "Get List Options" text field in the playlist downloader tab.
  - Add a checkbox in the playlist downloader tab to save entered playlist for processing.
  - Above three options in combination with manual setting of archive file option
    (configure tab->engine default option tab->"default download options" text field  makes it possible to
    easily monitor and download new entries in playlists.

  Version 1.8.0(October 12nd, 2021)
    [Windows]
  - Bundle "aria2c" binary.
  - Bundle "aria2c" extension.
    [All]
  - Add support for "yt-dlp-aria2c" extension that causes yt-dlp extension to use aria2c as its downloader.
  - Add support for "aria2c" extension.
  - Add Russian translations.

  Version 1.9.0(October 17th, 2021)
    [All]
    - Add Japanese translations,

  Version 2.0.0(Novermber 3rd, 2021)
    [All]
    - Add "-u" commnd line option to add a Url to the application's batch downloder tab. This feature is useful when used
    with browser extensions that can open links in external application and it can be used to quickly add a link to the application.
    - Add "-a" commnd line option to automatically start downloading Url added with "-u" option.

  Version 2.1.0(December 1st, 2021)
    - Add ability to set what engine should be used and with what options based on entered url. This ability allows for
      example to say "i want yt-dlp to be used with download option of "mp4-mobile" with any link from streamable.com".
    - Add ability to bookmark channels in the playlist downloader tab to make it easier to monitor favorite channels.

  Version 2.1.1(December 2st, 2021)
    - Fix a bug caused by a change in yt-dlp output.

  Version 2.2.0(December 2st, 2021)
    - Add French translations.
    - Add ability to show and save comments in batch downloader tab and playlist downloader tab.
    - Various changes and improvements.