@@ -218,6 +218,14 @@ void basicdownloader::updateEnginesList( const QStringList& e )
 				     [ this,s ]( const QString& e ){ m_settings.setDefaultEngine( e,s ) ; } ) ;
 }
 
+void basicdownloader::clipboardData( const QString& e )
+{
+	if( m_tabManager.currentTab() == 0 ){
+
+		m_ui.lineEditURL->setText( e ) ;
+	}
+}
+
 void basicdownloader::retranslateUi()
 {
 	this->resetMenu() ;
