@@ -42,11 +42,12 @@ public:
 		    QString debug ) ;
 	void init_done( Ui::MainWindow& ui,settings& settings ) ;
 	void setDefaultEngines() ;
+	int currentTab() ;
 	tabManager& gotEvent( const QByteArray& e ) ;
-	tabManager& enableAll();
-	tabManager& disableAll();
-	tabManager& resetMenu();
-	tabManager& reTranslateUi();
+	tabManager& enableAll() ;
+	tabManager& disableAll() ;
+	tabManager& resetMenu() ;
+	tabManager& reTranslateUi() ;
 	basicdownloader& basicDownloader()
 	{
 		return m_basicdownloader ;
